welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:32: error: '<-' expected but ')' found.
  for (compteur<1 to getMondeHauteur()-1)
                                        ^Array2:34: error: illegal start of simple expression
}
^